# fastapi-dockerc

./: Dockerfile  Makefile  docker-compose.dev.yml  docker-compose.prod.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 4724a13840c1_init_db.py
app/: main.py
app/core/: settings.py
app/models/: database.py  engine.py
app/routes/: user_routes.py
app/schema/: post.py  user.py
app/services/: user_service.py
app/utils/: generate_id.py
