[project]
name = "fastapi-docker-compose"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "bson>=0.5.10",
    "fastapi[standard]>=0.116.1",
    "pydantic-settings>=2.10.1",
    "ruff>=0.12.9",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.35.0",
]

[tool.ruff]
line-length = 200
line.select = ["E", "W", "F", "I"]
